name:                nes-emulator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/nes-emulator#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CPU
  build-depends:       array >= 0.5.1.0
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0
                     , lens >= 4.14
                     , mtl >= 2.2.1
                     , primitive >= 0.6.1.0
                     , stm >= 2.4
                     , vector >= 0.11.0.0
  default-language:    Haskell2010

executable nes-emulator-exe
   hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       array >= 0.5.1.0
                     , base
                     , bytestring >= 0.10.6.0
                     , lens >= 4.14
                     , mtl >= 2.2.1
                     , primitive >= 0.6.1.0
  default-language:    Haskell2010

test-suite nes-emulator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mtl >= 2.2.1
                     , vector >= 0.11.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/nes-emulator
